Mapa con activity que muestra muchas opciones para los shapes con copia

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,29 @@
 
     <string name="action_settings">Configuraciones</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_shapes">Map</string>
+
+    <!-- Nuevas cadenas-->
+    <string name="alpha">Alpha</string>
+    <string name="hue">Hue</string>
+    <string name="width">Width</string>
+    <string name="clickable">Clickable</string>
+    <!-- Polyline/polygon styling -->
+    <string name="polyline_demo_description">Demonstrates how to add Polylines to a map.</string>
+    <string name="start_cap">Start cap</string>
+    <string name="end_cap">End cap</string>
+    <string name="joint_type">Joint Type</string>
+    <string name="pattern">Pattern</string>
+    <string name="cap_butt">Butt</string>
+    <string name="cap_square">Square</string>
+    <string name="cap_round">Round</string>
+    <string name="cap_image">Image</string>
+    <string name="joint_type_default">Default</string>
+    <string name="joint_type_bevel">Bevel</string>
+    <string name="joint_type_round">Round</string>
+    <string name="pattern_solid">Solid</string>
+    <string name="pattern_dotted">Dotted</string>
+    <string name="pattern_dashed">Dashed</string>
+    <string name="pattern_mixed">Mixed</string>
+
 </resources>
