--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,6 @@
     <string name="ficha">Ficha</string>
     <string name="seguimiento">Seguimiento</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="no_internet_connection">sin conexion a internet</string>
+    <string name="no_tramos">No hay tramos</string>
 </resources>
