--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_splash_screen">SplashScreenActivity</string>
     <string name="abc">Administradora Boliviana de Carreteras</string>
+    <string name="lemaAbc">¡Carreteras que integran Bolivian@s para vivir bien!</string>
 </resources>
