--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="title_activity_splash_screen">SplashScreenActivity</string>
     <string name="abc">Administradora Boliviana de Carreteras</string>
     <string name="lemaAbc">¡Carreteras que integran Bolivian@s para vivir bien!</string>
+    <string name="imagen_mapa_de_backbround">imagen mapa de backbround</string>
 </resources>
