Activity que muestra la lista de proyectos mas codigo sisin mas id en una lista

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="abc">Administradora Boliviana de Carreteras</string>
     <string name="lemaAbc">¡Carreteras que integran Bolivian@s para vivir bien!</string>
     <string name="imagen_mapa_de_backbround">imagen mapa de backbround</string>
+    <string name="no_proyectos">no proyectos</string>
 </resources>
