--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,11 +40,9 @@
     <string name="no_internet_connection">sin conexion a internet</string>
     <string name="no_tramos">No hay tramos</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_splash_screen">SplashScreenActivity</string>
     <string name="abc">Administradora Boliviana de Carreteras</string>
     <string name="lemaAbc">¡Carreteras que integran Bolivian@s para vivir bien!</string>
     <string name="imagen_mapa_de_backbround">imagen mapa de backbround</string>
-    <string name="no_proyectos">no proyectos</string>
+    <string name="no_proyectos">No hay proyectos</string>
 </resources>
