--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,7 @@
     <string name="lemaAbc">¡Carreteras que integran Bolivian@s para vivir bien!</string>
     <string name="imagen_mapa_de_backbround">imagen mapa de backbround</string>
     <string name="no_proyectos">No hay proyectos</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
